fix/fix-contentOverlaping

--- a/styles/AboutPage.module.css
+++ b/styles/AboutPage.module.css
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 1200px;
+  max-width: max-content;
   padding-bottom: 100px;
 }
 .grid {
